//
//  AccessibilityIdentifier.swift
//  Weather Nab
//
//  Created by Huy Nguyen on 10/3/21.
//

import Foundation

enum AccessibilityIdentifier {
    static let dailyForecastMessageLabel = "dailyForecastMessageLabel"
    static let dailyForecastSpinner = "dailyForecastSpinner"
    static let dailyForecastTableView = "dailyForecastTableView"
    static let dailyForecastSectionHeaderLabel = "dailyForecastSectionHeaderLabel"
    static let dailyForecastDateLabel = "dailyForecastDateLabel"
    static let dailyForecastAverageTemperatureLabel = "dailyForecastAverageTemperatureLabel"
    static let dailyForecastHumidityLabel = "dailyForecastHumidityLabel"
    static let dailyForecastPressureLabel = "dailyForecastPressureLabel"
    static let dailyForecastDescriptionLabel = "dailyForecastDescriptionLabel"
}
